--- a/Sneakerz-Website/src/main/webapp/style/cart.css
+++ b/Sneakerz-Website/src/main/webapp/style/cart.css
@@ -73,7 +73,7 @@ label {
 .product .product-price:before,
 .product .product-line-price:before,
 .totals-value:before {
-    content: '$';
+    content: 'LKR';
 }
 
 .column-labels label {
@@ -237,7 +237,7 @@ label {
     }
 
     .product .product-line-price:before {
-        content: 'Item Total: $';
+        content: 'Item Total: LKR';
     }
 
     .totals .totals-item label {
